--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
+        android:paddingRight="@dimen/_21sdp"
         android:paddingBottom="@dimen/_16sdp">
 
         <ImageView
@@ -36,7 +37,6 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_38sdp"
             android:layout_marginTop="@dimen/_11sdp"
-            android:layout_marginRight="@dimen/_21sdp"
             android:layout_marginBottom="@dimen/_2sdp"
             app:cardCornerRadius="@dimen/_19sdp">
 
@@ -64,15 +64,15 @@
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_toLeftOf="@id/filterIconIV"
+                        android:background="@android:color/transparent"
                         android:cursorVisible="false"
-                        android:hint="Merchant’s Name/Reference No."
+                        android:hint="Merchant’s Name/Reference ID."
                         android:maxLines="1"
                         android:singleLine="true"
                         android:textColor="@color/primary_black"
                         android:textColorHint="@color/dark_grey"
                         android:textCursorDrawable="@drawable/cursor_color_text"
-                        android:textSize="@dimen/_10ssp"
-                        android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+                        android:textSize="@dimen/_10ssp" />
 
                     <View
                         android:layout_width="@dimen/_2sdp"
@@ -130,7 +130,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -162,22 +162,22 @@
                 android:visibility="visible">
 
 
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginBottom="@dimen/_2sdp"-->
-<!--                    app:cardCornerRadius="@dimen/_10sdp"-->
-<!--                    app:cardBackgroundColor="@color/white">-->
+                <!--                <androidx.cardview.widget.CardView-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginBottom="@dimen/_2sdp"-->
+                <!--                    app:cardCornerRadius="@dimen/_10sdp"-->
+                <!--                    app:cardBackgroundColor="@color/white">-->
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/transactionListPostedRV"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:clipToPadding="false"
-                        android:nestedScrollingEnabled="false"
-                        android:overScrollMode="never"
-                        android:scrollbars="none" />
-<!--                </androidx.cardview.widget.CardView>-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/transactionListPostedRV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
+                    android:scrollbars="none" />
+                <!--                </androidx.cardview.widget.CardView>-->
             </LinearLayout>
 
             <TextView
