--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -66,14 +66,6 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="Please enter card details"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp" />
     </LinearLayout>
 
     <RelativeLayout
@@ -94,11 +86,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/tvCardMsg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="Please enter card details"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/etlName"
                     style="@style/TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvCardMsg"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:hint="Name on card"
                     android:textColorHint="@color/primary_black"
                     app:boxStrokeColor="@color/primary_green"
@@ -112,7 +115,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textCapSentences"
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -372,12 +375,22 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/tvAddMsg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="Please confirm your billing address"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/etlAddress1"
                     style="@style/TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_14sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:hint="Billing Address Line 1"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/primary_green"
@@ -681,7 +694,7 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_39sdp"
+                        android:layout_height="@dimen/_42sdp"
                         android:layout_marginTop="@dimen/_6sdp"
                         android:background="@drawable/disable_bg" />
 
