EditCard functionality implemented

--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -402,7 +402,6 @@
                         android:id="@+id/etAddress1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="3131 Camino Del Rio North"
                         android:imeOptions="actionNext"
@@ -462,7 +461,6 @@
                         android:id="@+id/etAddress2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Suite 1400"
                         android:imeOptions="actionNext"
@@ -644,6 +642,7 @@
                         android:id="@+id/etZipCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="1234567890"
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="92108"
                         android:imeOptions="actionDone"
