--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -179,6 +179,7 @@
                             android:maxLength="100"
                             android:maxLines="1"
                             android:padding="14dp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
@@ -233,6 +234,7 @@
                             android:maxLength="100"
                             android:maxLines="1"
                             android:padding="14dp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
