--- a/app/src/main/res/layout/activity_retake.xml
+++ b/app/src/main/res/layout/activity_retake.xml
@@ -69,14 +69,15 @@
 
         <LinearLayout
             android:id="@+id/retakeLL"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/_43sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
