--- a/app/src/main/res/layout/verify_your_account.xml
+++ b/app/src/main/res/layout/verify_your_account.xml
@@ -39,8 +39,8 @@
                     android:layout_marginTop="@dimen/_37sdp">
 
                     <ImageView
-                        android:layout_width="@dimen/_15sdp"
-                        android:layout_height="@dimen/_15sdp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:src="@drawable/ic_x"
                         android:layout_marginRight="@dimen/_10sdp"
                         app:tint="@color/white" />
