--- a/app/src/main/res/drawable/bg_core.xml
+++ b/app/src/main/res/drawable/bg_core.xml
@@ -2,12 +2,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners
-                android:topLeftRadius="30dp"
-                android:topRightRadius="30dp" />
+            <stroke android:color="@color/white"
+                android:width="2dp"/>
+            <corners android:topLeftRadius="30dp"
+                android:topRightRadius="30dp"
+                />
+            <gradient android:startColor="@color/white"
+                      android:centerColor="@color/white"
+                android:endColor="@color/white"/>
 
         </shape>
     </item>
+
 
 </layer-list>
 
