--- a/app/src/main/res/layout/fragment_pay_amount_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_pay_amount_bottom_sheet.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@drawable/top_rounded_bg"
     tools:context=".fragments.PayAmountBottomSheet">
 
     <View
