Payment Methods Bug Fixes and states integration

--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -631,7 +631,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_14sdp"
-                    android:hint="Zipcode"
+                    android:hint="Zip Code"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/primary_green"
                     app:errorIconDrawable="@null"
