--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -113,7 +113,7 @@
 
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/_42sdp"
+                            android:layout_height="@dimen/_43sdp"
                             android:layout_marginTop="@dimen/_10sdp"
                             android:background="@drawable/disable_bg" />
 
@@ -452,7 +452,7 @@
                             android:hint=""
                             android:imeOptions="actionDone"
                             android:inputType="number|textNoSuggestions"
-                            android:maxLength="7"
+                            android:maxLength="5"
                             android:maxLines="1"
                             android:padding="14dp"
                             android:singleLine="true"
@@ -494,17 +494,18 @@
 
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/_42sdp"
+                            android:layout_height="@dimen/_43sdp"
                             android:layout_marginTop="@dimen/_6sdp"
                             android:background="@drawable/disable_bg" />
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/etlCountry"
                             style="@style/TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:enabled="false"
                             android:hint="Country"
-                            android:textColorHint="@color/black"
+                            android:textColorHint="@color/xdark_gray"
                             app:boxStrokeColor="@color/primary_green"
                             app:errorIconDrawable="@null"
                             app:expandedHintEnabled="false"
