--- a/app/src/main/res/layout/payment_remove.xml
+++ b/app/src/main/res/layout/payment_remove.xml
@@ -10,7 +10,6 @@
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_2sdp"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_13sdp"
         android:layout_marginBottom="@dimen/_28sdp"
         android:background="@color/primary_green" />
 
@@ -38,11 +37,13 @@
             android:src="@drawable/ic_bankactive" />
 
         <LinearLayout
+            android:id="@+id/layoutBank"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/imgBankIcon"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/tvBankName"
@@ -51,6 +52,8 @@
                 android:layout_weight="0.6"
                 android:fontFamily="@font/opensans_semibold"
                 android:gravity="left"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:text="Bank Name"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
@@ -66,6 +69,36 @@
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layoutCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/imgBankIcon"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvCardName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="left"
+                android:text="Bank Name"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+
+            <TextView
+                android:id="@+id/tvCardNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_6sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="left"
+                android:text="••••5359"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+        </LinearLayout>
     </RelativeLayout>
 
     <View
@@ -73,7 +106,7 @@
         android:layout_height="@dimen/_1sdp"
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/_28sdp"
-        android:background="@color/light_gray" />
+        android:background="@color/vlight_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
