--- a/app/src/main/res/layout/activity_id_ve_additional_action.xml
+++ b/app/src/main/res/layout/activity_id_ve_additional_action.xml
@@ -82,7 +82,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
 
-                    <com.santalu.maskara.widget.MaskEditText
+                    <EditText
                         android:id="@+id/ssnET"
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
@@ -95,11 +95,12 @@
                         android:maxLines="1"
                         android:padding="14dp"
                         android:singleLine="true"
+                        android:maxLength="9"
                         android:textColor="@color/primary_black"
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="@dimen/_12ssp"
-                        app:mask="___-__-____" />
+                        />
 
 
                 </LinearLayout>
@@ -130,7 +131,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginEnd="@dimen/_21sdp">
 
