--- a/app/src/main/res/drawable/shape_round_rectable.xml
+++ b/app/src/main/res/drawable/shape_round_rectable.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/inactive_color" />
+    <solid android:color="@color/slidebtn_bg" />
 
-    <corners android:radius="@dimen/_25sdp" />
+    <corners android:radius="@dimen/_21sdp" />
 
 </shape>
