--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,4 +41,11 @@
     <color name="txn_pending_trans">#FFEFD8</color>
     <color name="txn_failed_trans">#E8E8E8</color>
     <color name="blue_light">#d8e2f0</color>
+    <color name="text_grey_msg">#C4C5C7</color>
+
+
+
+    <color name="teal_700_trans">#22018786</color>
+    <color name="slidebtn_bg">#DFF4F3</color>
+
 </resources>
